tests/integration/commands/export/html/child_links/02_child_link_not_registered_relation/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output | filecheck %s --dump-input=fail --check-prefix=CHECK
CHECK: Semantic error: Requirement relation type/role is not registered: Child.
CHECK: Location: {{.*}}sample.sdoc:4:1
CHECK: Hint: Problematic requirement: REQ-1.
